[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juego/Weapons/NormalWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/UI/BarraHitPoints.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Weapons/WeaponAnti-Escudos.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Buques/NaveBase.gd" type="Script" id=4]
[ext_resource path="res://Juego/Jugador/Impact_Player.ogg" type="AudioStream" id=5]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
mass = 2.0
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708

[node name="NormalWeapon" parent="." instance=ExtResource( 1 )]
fire_rate = 0.4
proyectile_velocity = 2000

[node name="WeaponAntiEscudos" parent="." instance=ExtResource( 3 )]

[node name="SFX_Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
bus = "SFX"

[node name="BarraHitPoints" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
